--- a/apps/api-gateway/tsconfig.app.json
+++ b/apps/api-gateway/tsconfig.app.json
@@ -22,6 +22,9 @@
   ],
   "references": [
     {
+      "path": "../../libs/types/tsconfig.lib.json"
+    },
+    {
       "path": "../../libs/prisma/tsconfig.lib.json"
     }
   ]
