--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/platform-socket.io": "^11.1.5",
+    "@nestjs/websockets": "^11.1.5",
     "@prisma/client": "^6.13.0",
+    "@supabase/supabase-js": "^2.53.0",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
@@ -75,6 +78,8 @@
     "passport-local": "^1.0.0",
     "prisma": "^6.13.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "sharp": "^0.34.3",
+    "socket.io": "^4.8.1"
   }
 }
