--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
-    "autoprefixer": "10.4.13",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^30.0.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -62,9 +62,9 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.3.11",
-    "postcss": "8.4.38",
+    "postcss": "^8.5.6",
     "prettier": "^2.6.2",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
@@ -91,6 +91,7 @@
     "@nestjs/websockets": "^11.1.5",
     "@prisma/client": "^6.13.0",
     "@supabase/supabase-js": "^2.53.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
@@ -118,6 +119,6 @@
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "tailwind-scrollbar": "^3.1.0"
+    "tailwind-scrollbar": "^4.0.2"
   }
 }
