feat: add notification service with RabbitMQ integration
- Implemented a new notification service that listens for any user related events.
- Created a utility function to emit messages to RabbitMQ.
- Updated likes service to emit notifications when a post is liked.
- Added necessary modules, constants, and DTOs for notifications.
- Configured RabbitMQ client in the notification service.
- Created a Docker Compose file for RabbitMQ setup.
- Updated Prisma schema to include notification model and types.

--- a/nx.json
+++ b/nx.json
@@ -51,7 +51,10 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": ["apps/api-gateway-e2e/**/*"]
+      "exclude": [
+        "apps/api-gateway-e2e/**/*",
+        "apps/notification-service-e2e/**/*"
+      ]
     },
     {
       "plugin": "@nx/react/router-plugin",
