--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,12 @@
     },
     {
       "path": "./apps/webapp"
+    },
+    {
+      "path": "./apps/notification-service-e2e"
+    },
+    {
+      "path": "./apps/notification-service"
     }
   ]
 }
