--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
