--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,9 +18,7 @@
     "**/.cache": true
   },
   "files.exclude": {
-    "**/node_modules": true,
-    "**/dist": true,
-    "**/build": true
+    "**/node_modules": true
   },
   "search.exclude": {
     "**/node_modules": true,
